Fixed spacing on heading images and starting out docs

--- a/app/assets/stylesheets/application/navigation.sass
+++ b/app/assets/stylesheets/application/navigation.sass
@@ -1,6 +1,8 @@
 body
   header.navigation
     box-shadow: 0 1px 2px rgba(0,0,0,0.2)
+    .top-bar-section .has-form 
+      padding: 0 5px
     h1#title
       font-weight: bold
     a.button
